added palette e toggle filter

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     left:  0;
     right:  0;
     height: 20px;
+    background: #f8f8f8;
     -webkit-user-select: none;
     -webkit-app-region: drag;
 "></div>
