--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,7 @@
     -webkit-user-select: none;
     -webkit-app-region: drag;
 "></div>
-  <app-root></app-root>
-
+<app-root></app-root>
 <script>
   window.log = require('electron-log');
   window.fs = require('fs');
@@ -51,6 +50,10 @@
   window.Tray = require('electron').remote.Tray;
   window.MachineId = require('node-machine-id').machineIdSync();
   window.keytar = require('keytar');
+  window.http = require('follow-redirects/http'); // require('http'); follow-redirects/
+  window.https = require('follow-redirects/https'); // require('https');
+  window.httpProxyAgent = require('http-proxy-agent');
+  window.httpsProxyAgent = require('https-proxy-agent');
 
   // Add Blur after Focus effect
   document.addEventListener('click', function(e) {
