--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
   window.Tray = require('electron').remote.Tray;
   window.MachineId = require('node-machine-id').machineIdSync();
   window.keytar = require('keytar');
-  window.http = require('follow-redirects/http');
-  window.https = require('follow-redirects/https');
+  window.http = require('follow-redirects').http;
+  window.https = require('follow-redirects').https;
   window.httpProxyAgent = require('http-proxy-agent');
   window.httpsProxyAgent = require('https-proxy-agent');
 
