--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     -webkit-user-select: none;
     -webkit-app-region: drag;
 "></div>
+<div class="mask"></div>
 <app-root></app-root>
 <script>
   window.log = require('electron-log');
