multi IpD feature

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 <script>
   window.native = {
     log: require('electron-log'),
-    fs: require('fs'),
+    fs: require('fs-extra'),
     rimraf: require('rimraf'),
     os: require('os'),
     ini: require('ini'),
