refactor: readded fix to native-service.ts

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <script>
-  window = {
+  window.native = {
     log: require('electron-log'),
     fs: require('fs-extra'),
     rimraf: require('rimraf'),
