fix: added icons for both light and dark themes

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
     currentWindow: require('electron').remote.getCurrentWindow(),
     Menu: require('electron').remote.Menu,
     Tray: require('electron').remote.Tray,
-    ipcRenderer: require('electron').ipcRenderer
+    ipcRenderer: require('electron').ipcRenderer,
+    nativeTheme: require('electron').remote.nativeTheme
   };
 </script>
 <app-root></app-root>
