fix: closing MFA dialog without inserting code put session inactive and show a warning to user
fix: having MFA active and application in blur now allow for notification and popping the app up again to ask for user interaction

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
     Menu: require('electron').remote.Menu,
     Tray: require('electron').remote.Tray,
     ipcRenderer: require('electron').ipcRenderer,
-    nativeTheme: require('electron').remote.nativeTheme
+    nativeTheme: require('electron').remote.nativeTheme,
+    notification: require('electron').remote.Notification
   };
 </script>
 <app-root></app-root>
