fix: the minimizing and change of the focus works correctly

--- a/packages/desktop-app/electron/tab-browser/tab-browser.html
+++ b/packages/desktop-app/electron/tab-browser/tab-browser.html
@@ -1,3 +1,17 @@
-<tab-group id="tabs" new-tab-button="true" sortable="true"></tab-group>
-
-<script src="tab-browser.js"></script>
+<html>
+<head>
+  <style>
+    html, body {
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+</head>
+<body>
+  <tab-group id="tabs" new-tab-button="true" sortable="true"></tab-group>
+  <script src="tab-browser.js"></script>
+</body>
+</html>
