feat: removed plus button from tab browser

--- a/packages/desktop-app/electron/tab-browser/tab-browser.html
+++ b/packages/desktop-app/electron/tab-browser/tab-browser.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <tab-group id="tabs" new-tab-button="true" sortable="true"></tab-group>
+  <tab-group id="tabs" sortable="true"></tab-group>
   <script src="tab-browser.js"></script>
 </body>
 </html>
