chore: added meta for aws iam role federated session

--- a/docs_extra/overrides/main.html
+++ b/docs_extra/overrides/main.html
@@ -91,7 +91,7 @@
       },
       {
         "@type": "HowToSection",
-        "name": "Video Tutorial",
+        "name": "Video tutorial",
         "position": "4",
         "itemListElement": [
           {
@@ -111,5 +111,4 @@
   }
 </script>
 {% endif %}
-<!-- add custom content -->
 {% endblock %}
